Fix for #15551 - Average article quality text out of alignment + code reformatings.
git-svn-id: http://halodev.ontoprise.com/svn/HaloSMWExtension/trunk@12599 f80b7aa0-dfcc-4e65-a0d9-74108174cbc8

--- a/extensions/Collaboration/skins/Comment/collaboration-comment.css
+++ b/extensions/Collaboration/skins/Comment/collaboration-comment.css
@@ -44,7 +44,7 @@ span#collabComFileToggle > input[type=checkbox] {
 span.collabComInternAvg {
 	color: grey;
 	float: right;
-	padding: 5px;
+/*	padding: 5px;*/
 }
 
 div.collabComInternRatingIcon {
